# python-code

./: .envrc  .gitignore  .gitlab-ci.yml  BUILD.bazel  README.md  WORKSPACE  gen-build.sh  pants.ci.toml  pants.toml
bazel-out/: volatile-status.txt
bazel-python-code/bazel-out/: stable-status.txt
pants-plugins/: macros.py
src/main/logica_programacao/atividade_continua_3/ex5/: BUILD.bazel  main.py
src/main/lp/ac_zero/circle_area/: BUILD
src/main/lp/ac_zero/extremely_basic/: BUILD  main.py
src/main/lp/ac_zero/hello_world/: BUILD  main.py
src/main/lp/ac_zero/simple_sum/: main.py
src/main/lp/ambientacao/average_1/: BUILD.bazel  main.py
src/main/lp/ambientacao/circle_area/: BUILD.bazel  main.py
src/main/lp/ambientacao/extremely_basic/: BUILD.bazel
src/main/lp/ambientacao/hello_world/: BUILD.bazel
src/main/lp/ambientacao/simple_product/: BUILD  (+2 more)
src/main/poo/atividade_continua_1/: BUILD.bazel  numeros.py
src/main/poo/atividade_continua_2/: BUILD.bazel  atividade_conta.py
src/main/poo/atividade_continua_3/: BUILD.bazel  loja.py
src/test/poo/atividade_continua_1/: BUILD.bazel  main_test.py
src/test/poo/atividade_continua_1/cases-count-primes/case-1/: input.txt  output.txt
src/test/poo/atividade_continua_1/cases-count-primes/case-2/: input.txt  output.txt
src/test/poo/atividade_continua_1/cases-is-armstrong/case-1/: input.txt
src/test/poo/atividade_continua_1/cases-is-prime/case 1/: input.txt  output.txt
src/test/poo/atividade_continua_2/: BUILD.bazel  atividade_conta_test.py
src/test/poo/atividade_continua_3/: BUILD.bazel  test_loja.py
(+209 files in other folders)
