py_test(
    name = "src_test_main_test",
    srcs = ["main_test.py"],
    data = [
        "cases-is-almost-armstrong",
        "cases-is-prime",
        "cases-prime-list",
        "cases-count-primes",
        "cases-is-armstrong",
    ],
    deps = [
        "//src/main/poo/atividade_continua_1:src_lib",
        "//src/library/commons/testing:src_lib",
    ],
    main = "main_test.py"
)

